# pydanticxml

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
pydantic_xmlmodel/: __init__.py  serde.py  xmlmodel.py
pydanticxml/: xmlmodel.py
tests/: test_list.py  test_main.py  test_namespace.py  test_none.py  test_recursion.py  test_xml_content.py
