[tool.poetry]
name = "pydantic-xmlmodel"
version = "0.4"
description = "PydanticXML is a Python library that provides a way to convert Pydantic models to XML and vice versa."
authors = ["cofob <cofob@riseup.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cofob/pydanticxml"
homepage = "https://github.com/cofob/pydanticxml"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pydantic = "^2"

[tool.poetry.group.dev.dependencies]
black = ">=23.3,<25.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pytest = "^7.3.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
